--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,18 +15,20 @@
 			<div class="col-md-6">
 				<h2>Login</h2>
 				<form class="woocommerce-form woocommerce-form-login login" #forms="ngForm" (ngSubmit)="login(form)">			
-					<p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide">
+					<p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide" [class.has-error]="email.invalid && email.touched">
 						<label for="username">Email address&nbsp;<span class="required">*</span></label>
-						<input type="text" class="woocommerce-Input woocommerce-Input--text input-text" name="username" id="username" autocomplete="username" [(ngModel)]="form.email">		
+						<input type="email" class="woocommerce-Input woocommerce-Input--text input-text" name="email" id="email" autocomplete="email" #email="ngModel" [email]="form.email!==''" [(ngModel)]="form.email" required>
+						<span class="help-block" *ngIf="email.errors?.email && email.touched"> Email Is Invalid</span>		
 					</p>
-					<p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide">
+					<p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide" [class.has-error]="password.invalid && password.touched">
 						<label for="password">Password&nbsp;<span class="required">*</span></label>
-						<input class="woocommerce-Input woocommerce-Input--text input-text" type="password" name="password" id="password" autocomplete="current-password" [(ngModel)]="form.password">
+						<input class="woocommerce-Input woocommerce-Input--text input-text" type="password" name="password" id="password" #password="ngModel" [(ngModel)]="form.password" required>
+						<span class="help-block" *ngIf="password.errors?.required && password.touched"> Password Is Required</span>
 					</p>								
 					<p class="form-row">
 						<input type="hidden" id="woocommerce-login-nonce" name="woocommerce-login-nonce" value="0098db345b">
 						<input type="hidden" name="_wp_http_referer" value="/account/">				
-						<button type="submit" class="woocommerce-Button button" name="login" value="Log in">Log in</button>
+						<button type="submit" class="woocommerce-Button button" name="login" value="Log in" [disabled]="!forms.valid">Log in</button>
 						<label class="woocommerce-form__label woocommerce-form__label-for-checkbox inline">
 							<input class="woocommerce-form__input woocommerce-form__input-checkbox" name="rememberme" type="checkbox" id="rememberme" value="forever"> <span>Remember me</span>
 						</label>
@@ -42,7 +44,7 @@
 					<p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide">
 						<label for="reg_email">Email address&nbsp;<span class="required">*</span></label>
 						<input type="email" class="woocommerce-Input woocommerce-Input--text input-text" name="email" id="reg_email" autocomplete="email" value="">			</p>
-					<div class="woocommerce-privacy-policy-text"><p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="https://zotato.in/?page_id=3" class="woocommerce-privacy-policy-link" target="_blank">privacy policy</a>.</p>
+					<div class="woocommerce-privacy-policy-text"><p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="/" class="woocommerce-privacy-policy-link" target="_blank">privacy policy</a>.</p>
 					</div>
 					<p class="woocommerce-FormRow form-row">
 						<input type="hidden" id="woocommerce-register-nonce" name="woocommerce-register-nonce" value="184000389a"><input type="hidden" name="_wp_http_referer" value="/account/">				<button type="submit" class="woocommerce-Button button" name="register" value="Register">Register</button>
