--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -24,10 +24,12 @@
 				<input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit" [disabled]="!forms.valid"/>
 			</div>
 		</form>
+		<textarea id="txtAddress" rows="3" cols="25"></textarea>
+    <input id="btn" type="button" value="search for miami coordinates" />
 		</div>
-		<ul>
-		    <li *ngFor="let item of alldatas">{{item.email}} | {{item.name}} </li>
-		  </ul>
+		<!--<ul>
+		    <li *ngFor="let item of alldatas">{{item.product}} | {{item.cost}} </li>
+		  </ul>-->
 	</div>
 </div>
 <!-- <app-footer></app-footer>-->
