--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -26,3 +26,28 @@
     text-transform: uppercase;
     word-spacing: 2px;
 }
+.col-md-3{
+        text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 20px; 
+}
+.brdr{
+    padding-bottom: 10px;
+    border: 1px solid #ccc;
+}
+img{
+    width: 100%;
+    height: 300px;
+}
+.prdnm{
+        font-size: 16px;
+    font-weight: 700;
+    color: #666;
+    padding-top: 15px;
+}
+.pdrcst{
+    color: #85bc42;
+    font-weight: 600;
+    font-size: 16px;
+}
