--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -10,8 +10,6 @@
 	color: #ddd; 
 	line-height: 45px;
 	margin: 15px;
-	
-	
 }
 .bgclr a{
 	color: #fff;
@@ -28,6 +26,68 @@
     display: inline-block;
     width: 30%;
 }
+@media screen and (max-width: 768px){
+    .bgclr a {
+    font-size: 20px;
+    }
+    .header-search_filter {
+    width: 100% !important;
+    top: -5px;
+}
+.header-search_filter i {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    background: #86bc42;
+    width: 44px;
+    height: 44px;
+    color: #fff;
+    font-size: 30px;
+    padding-left: 12px;
+    cursor: pointer;
+    padding-top: 8px;
+}
+.form-group {
+    position: relative !important;
+    width: 100% !important;
+} 
+.header-search_filter i {
+    position: absolute !important;
+    right: 0px !important;
+    top: 0px !important;
+    background: #86bc42 !important;
+    width: 44px !important;
+    height: 44px !important;
+    color: #fff !important;
+    font-size: 30px;
+    padding-left: 12px !important;
+    cursor: pointer !important;
+    padding-top: 8px !important;
+}
+button.product-search {
+    position: absolute !important;
+    top: 44px !important;
+    right: 15px !important;
+}
+.buzz-logo {
+    float: none;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-bottom: 30px;
+}
+.custom-logo {
+    height: auto;
+    max-width: 100%;
+}
+.buzz-cart-main {
+    float: none !important;
+    margin: 0 auton !important;
+     width: 60% ;
+}
+
+}
+
 .product-search-field, .header-search_filter .formDropdown {
     width: 100%;
     font-size: 12px;
@@ -116,4 +176,22 @@
 }
 .woocommerce-mini-cart__empty-message {
     text-align: center;
+}
+.buzz-cart-main:before {
+    content: "\f07a";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    font-size: 22px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 44px;
+    height: 44px;
+    background: #86bc42;
+    color: #ffffff;
+    z-index: 9;
+    text-align: center;
+    line-height: 44px;
 }
