--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,28 +3,28 @@
   <div class="row bgclr" style="">
     
     <div class="col-sm-1"></div>
-    <div class="col-sm-2"><a target="_blank" href="https://www.google.com.np/maps/place/Solan Himachal Pradesh"> awsw hjjh gfg</a></div>
-    <div class="col-sm-2"><a href="mailto:jaisharma8893@gmail.com"> hhjh@gmail.com</a></div>
-    <div class="col-sm-1"><a href="callto:'8894971373">121212121</a></div>
+    <div class="col-sm-2"><i class="fa fa-map-marker" aria-hidden="true"></i> <a target="_blank" href="https://www.google.com.np/maps/place/Solan Himachal Pradesh"> awsw hjjh gfg</a></div>
+    <div class="col-sm-2"><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:jaisharma8893@gmail.com"> hhjh@gmail.com</a></div>
+    <div class="col-sm-1"><i class="fa fa-phone" aria-hidden="true"></i> <a href="callto:'8894971373">121212121</a></div>
     <div class="col-sm-3"></div>
     <div class="col-sm-2">
-      <a routerLink="/login" >Login</a>
-     <a routerLink="/login         " style="float: right;">Create your Account</a>
+      <a routerLink="/login" ><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+     <a routerLink="/login" style="float: right;"><i class="fa fa-user-o" aria-hidden="true"></i> Create your Account</a>
     </div>
     <div class="col-sm-1"></div>
   </div>
   <div class="row secndrw">
     <div class="col-sm-1"></div>
-    <div class="col-sm-2">
-        <a href="https://zotato.in/" class="custom-logo-link" rel="home" itemprop="url">
-          <img width="440" height="90" src="https://zotato.in/wp-content/uploads/2018/10/zotatonew2-1.png" class="custom-logo" alt="zotato logo">
+    <div class="col-sm-2 buzz-logo">
+        <a routerLink="/home" class="custom-logo-link" rel="home" itemprop="url">
+          <img width="440" height="90" src="/assets/zotatonew2-1.png" class="custom-logo" alt="zotato logo"> 
         </a>
     </div>
-    <div class="col-sm-1"></div>
-    <div class="col-sm-5">
-      <form class="product-search form-inline" role="search" method="get" id="searchform" action="https://zotato.in/">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4">
+      <form class="product-search form-inline" role="search" method="get" id="searchform" action="/home">
         <div class="header-search_filter">
-            <select class="formDropdown" name="term">
+            <select class="form-control formDropdown" name="term">
             	<option value="">All Categories</option>
             	<option data-tokens="breakfast" value="breakfast">breakfast</option>
             	<option data-tokens="chawmin" value="chawmin">chawmin</option>
@@ -36,9 +36,9 @@
             <i class="fa fa-angle-down customColor"></i>
         </div>
         <div class="form-group">
-            <input class="product-search-field" type="text" value="" name="s" id="s" placeholder="Enter Food Name ...">
+            <input class="form-control product-search-field" type="text" value="" name="s" id="s" placeholder="Enter Food Name ...">
         </div>
-        <button type="submit" class="product-search">s
+        <button type="submit" class="product-search">
             <i class="fa fa-search"></i>
         </button>
         <input type="hidden" name="post_type" value="product">
@@ -48,9 +48,9 @@
     <div class="col-sm-2">
       <div class="buzz-cart-main">
         <div class="view-cart">
-          <a class="cart-contents" href="https://zotato.in/cart/" title="View your shopping cart">
-            <span class="count">0 item(s) -</span>
-            <span class="amount">₹0.00</span> 
+          <a class="cart-contents" routerLink="/cart/" title="View your shopping cart">
+            <span class="count">{{quantity}} item(s) -</span>
+            <span class="amount">₹ {{price}}</span> 
           </a>              
         </div>
         <div class="buzz-viewcartproduct">
