--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -60,8 +60,8 @@
 </div>
 <div class="woocommerce-notices-wrapper"></div>
 <form name="checkout" method="post" class="checkout woocommerce-checkout" enctype="multipart/form-data" novalidate="novalidate">
-		<div class="col2-set" id="customer_details">
-			<div class="col-1">
+		<div class="row col2-set" id="customer_details">
+			<div class="col-md-6">
 				<div class="woocommerce-billing-fields">
 		<h3>Billing details</h3>
 	<div class="woocommerce-billing-fields__field-wrapper">
@@ -90,7 +90,7 @@
 			</p>
 			</div>
 			</div>
-			<div class="col-2">
+			<div class="col-md-6">
 				<div class="woocommerce-shipping-fields">
 	</div>
 <div class="woocommerce-additional-fields">
@@ -102,6 +102,17 @@
 		</div>
 	
 	<h3 id="order_review_heading">Your order</h3>
+	<div class="row" *ngFor="let item of alldatas;let ind = index ">
+		<div class="col-sm-4" >
+			<span>{{item.product}}</span> 
+		</div>
+		<div class="col-sm-4" >
+			<span>{{item.quantity}}</span>
+		</div>
+		<div class="col-sm-4" >
+			 <span>{{item.price*item.quantity}}</span>
+		</div>
+	</div>
 </form>
 
 </div>
