--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
 						</label>
 					</p>
 					<p class="woocommerce-LostPassword lost_password">
-						<a href="https://zotato.in/account/lost-password/">Lost your password?</a>
+						<a href="#">Lost your password?</a>
 					</p>
 				</form>
 			</div>
@@ -44,10 +44,13 @@
 					<p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide">
 						<label for="reg_email">Email address&nbsp;<span class="required">*</span></label>
 						<input type="email" class="woocommerce-Input woocommerce-Input--text input-text" name="email" id="reg_email" autocomplete="email" value="">			</p>
-					<div class="woocommerce-privacy-policy-text"><p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="/" class="woocommerce-privacy-policy-link" target="_blank">privacy policy</a>.</p>
+					<div class="woocommerce-privacy-policy-text"><p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our 
+						<a href="/" class="woocommerce-privacy-policy-link" target="_blank">privacy policy</a>.</p>
 					</div>
 					<p class="woocommerce-FormRow form-row">
-						<input type="hidden" id="woocommerce-register-nonce" name="woocommerce-register-nonce" value="184000389a"><input type="hidden" name="_wp_http_referer" value="/account/">				<button type="submit" class="woocommerce-Button button" name="register" value="Register">Register</button>
+						<input type="hidden" id="woocommerce-register-nonce" name="woocommerce-register-nonce" value="184000389a">
+						<input type="hidden" name="_wp_http_referer" value="/account/">				
+						<button type="submit" class="woocommerce-Button button" name="register" value="Register">Register</button>
 					</p>
 				</form>
 			</div>
@@ -57,7 +60,7 @@
 	<section id="secondaryright" class="widget-area" role="complementary" style="position: relative; overflow: visible; box-sizing: border-box; min-height: 1px;">
 		<div class="theiaStickySidebar" style="padding-top: 0px; padding-bottom: 1px; position: static; transform: none; left: 1016px; top: 0px;">
 			<section id="search-2" class="widget widget_search">
-				<form role="search" method="get" class="search-form" action="https://zotato.in/">
+				<form role="search" method="get" class="search-form" action="#">
 					<label>
 						<span class="screen-reader-text">Search for:</span>
 						<input type="search" class="search-field" placeholder="Search …" value="" name="s">
